css/style.css
/* Palette */

:root {
    --theme: #2196f3;
    --theme-accent: #424242;
    --theme-dark: #1976d2;
}

/* Resets */

/* Resets */

a, a:active, a:focus, a:hover, a:visited { text-decoration:none; }

html, body, div, form, h1, h2, h3, h4, h5, h6, a, p, li, button {
    margin: 0;
    padding: 0;
}

/* Font selectors */

a, button, li, h1, h2, h3, h4, h5, h6, input, label, p, span {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    color: inherit;
    font-family: 'Roboto', sans-serif;
    line-height: 1.5em;
    font-weight: 400;
}

a, button, li, input, label, p { font-size: 1em; }

a {
    color: var(--theme);
    text-decoration: underline;
}

a:hover {
    color: var(--theme);
    text-decoration: underline;
}

h1 {
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: 300;
}

p { color: #727272; }

/* Element selectors */

* {
    color: #444;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    position: relative;
}

body, footer { background-color: white; }

footer { padding: 35px 0; }

header {
    background: #022b36;
    clip-path: inset(0 0 0 0);
}

header > div { position: fixed; }

html {
    width: 100%;
    height: 100%;
    background-color: white;
}

img { user-select: none; }

main {
    background-color: white;
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.14), 0 0 20px rgba(0, 0, 0, 0.26);
}

/* Class selectors */

.align-center { text-align: center; }

.align-right { text-align: right; }

.block {
    padding-bottom: 50px;
    padding-top: 50px;
}

.block:nth-child(even) { background-color: #f8f8f8; }

.bounce { animation: bounce 1s; }

.button, .button:focus:not(:active) {
    background-color: var(--theme);
    border-radius: 2px;
    color: white;
    display: inline-block;
    font-family: inherit;
    font-weight: 500;
    padding: 14px;
    text-decoration: none;
    transition: all .2s ease-in-out;
}

.button:active {
    background-color: var(--theme-dark);
    color: white;
    text-decoration: none;
}

.button:hover:not(:active) {
    background-color: var(--theme-dark);
    color: white;
    text-decoration: none;
}

.card {
    background-color: white;
    border-radius: 2px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    padding: 14px;
    text-align: center;
    transform-style: preserve-3d;
    transition: all .2s ease-in-out;
}

.card:hover {
    box-shadow: 0 14px 15px rgba(0, 0, 0, 0.10), 0 10px 10px rgba(0, 0, 0, 0.22);
    transform: scale(1.01);
}

.card-header {
    background-color: var(--theme-accent);
    border-radius: 2px 2px 0 0;
    margin: -14px -14px 14px -14px;
    padding: 16px;
}

.card-header > p {
    color: white;
    font-weight: 500;
}

.center-self {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.center-items {
    align-items: center;
    display: flex;
    justify-content: center;
}

.demo {
    left: 50%;
    opacity: 0;
    position: absolute;
    top: 50%;
    z-index: 20;
}

.demo-android {
    transform: translate(-50%, -50%);
    width: 92%;
}

.demo-cards {
    flex-basis: auto;
    flex-grow: unset;
    width: 340px;
}

.demo-ti-84 {
    transform: translate(-50%, -203%);
    width: 65%;
}

.demo-web-app {
    transform: translate(-50%, -46.7%);
    width: 98.4%;
}

.device-wrapper { margin: 0 auto; }

.fill {
    width: 100%;
    height: 100%;
}

.fill-x { width: 100%; }

.flex-basis-100 { flex-basis: 100%; }

.popup {
    background-color: var(--theme-accent);
    border-radius: 2px;
    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.10), 0 3px 3px rgba(0, 0, 0, 0.22);
    display: inline-block;
    left: 0;
    margin: 12px 0;
    opacity: 0;
    padding: 14px;
    position: absolute;
    text-align: center;
    top: 25px;
    transition: all .2s ease-in-out;
    z-index: 10;
}

.popup > p {
    color: white;
    white-space: nowrap;
}

.popup-wrapper { position: relative; }

.popup-wrapper .button:hover ~ .popup {
    opacity: 1;
    top: 35px;
}

.portrait {
    border-radius: 50%;
    max-width: 256px;
}

.scroll-background-small, .scroll-background-large {
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.08);
    border-radius: 50%;
    opacity: 0;
    position: absolute;
    transform-style: preserve-3d;
    transition: all .2s ease-in-out;
}

.scroll-icon {
    width: 2em;
    height: 2em;
    transform-style: preserve-3d;
    transition: all .2s ease-in-out;
    vertical-align: middle;
}

.scroll-wrapper {
    width: 3em;
    height: 3em;
    bottom: 60px;
    left: 50%;
    position: absolute;
    transform: translate(-50%, 0);
}

.scroll-wrapper:hover .scroll-background-small {
    opacity: 1;
    transform: scale(2);
    transition: all .3s ease-in-out;
}

.scroll-wrapper:hover .scroll-background-large {
    opacity: 1;
    transform: scale(2.5);
}

.shadow-dark { box-shadow: 0 0 25px rgba(0, 0, 0, 0.14), 0 0 20px rgba(0, 0, 0, 0.26); }

.shadow-dark-text { text-shadow: 0 0 25px rgba(0, 0, 0, 0.28), 0 0 20px rgba(0, 0, 0, 0.52); }

.strikethrough { text-decoration: line-through; }

.text-emphasis {
    color: inherit;
    font-family: inherit;
    font-weight: 500;
}

.text-white { color: white; }

.title {
    color: white;
    font-size: 72px;
    font-weight: 500;
}

.video-player {
    height: 0;
    padding-bottom: 56.25%;
    position: relative;
}

.video-player iframe {
    bottom: 0;
    height: 100%;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
}

/* Keyframes */

@keyframes bounce {
    0% {
        opacity: 0;
        transform: translateY(200px);
    }
    25% { transform: translateY(-50px); }
    50% { transform: translateY(15px); }
    75% { transform: translateY(-8px); }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

/* @Media */

@media (max-width: 320px) {
    .title { font-size: 42px; }
}

@media only screen and (max-width: 575px) {
    .button {
        text-align: center;
        width: calc(100% - 28px);
    }

    .portrait { max-width: 192px; }
}

@media only screen and (max-width: 767px) {

    footer .align-right { text-align: center; }

    .demo-cards { width: 100%; }

    .card:hover {
        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
        transform: scale(1);
    }

    .popup { display: none; }

    .scroll-background-small, .scroll-background-large { display: none; }

    .scroll-wrapper {
        width: 2em;
        height: 2em;
        bottom: 40px;
    }

    .title { font-size: 48px; }
}

